--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://static.pexels.com/photos/9574/pexels-photo.jpeg");
+    background-image: url("../images/bg.jpg");
     background-size: 100vw 100vh;
 }
 
