--- a/client/views/weatherBlock.html
+++ b/client/views/weatherBlock.html
@@ -1,9 +1,15 @@
 <div >
-  <ul ><h5>{{weather.day}}</h5></ul> 
-  <div >
-    <ul class='text-left'><skycon icon="weather.icon" size="50"></skycon></ul>
-    <ul class='text-left'><div class='summaryText'>{{weather.summary}}</div> </ul>
-    <ul class='text-left'> <span class='label label-default'>High of:</span> {{weather.temperatureMax}} °F</ul>
-    <ul class='text-left'> <span class='label label-default'>Low of:</span> {{weather.temperatureMin}} °F</ul>
-  </div>
+  <ul class='text-left'>
+    <div class="day-info">
+      <div class="weather-icon">
+      <skycon icon="weather.icon" size="50"></skycon>
+      </div>
+      <div class="date-info">
+        <h4>{{weather.day}}</h4>
+      </div>
+    </div>
+  </ul>
+  <ul class='text-left'><div class='summaryText'>{{weather.summary}}</div> </ul>
+  <ul class='text-left'><span class='label label-default'>High of:</span> {{weather.temperatureMax}} °F</ul>
+  <ul class='text-left'><span class='label label-default'>Low of:</span> {{weather.temperatureMin}} °F</ul>
 </div>
