update past search view

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -189,3 +189,9 @@ nav {
   width: 100%;
   padding-left: 10px;
 }
+
+.whiteContainer .label{
+  display: inline-block;
+  font-size: 1em;
+  margin: 10px;
+}
