--- a/client/views/login.html
+++ b/client/views/login.html
@@ -11,11 +11,8 @@
         <input type="password" class="form-control" name="password" ng-model="loginForm.password" required>
       </div>
       <div  class="text-center">
-        <button type="submit" class="btn btn-info">Login</button>
+        <button type="submit" class="btn btn-info">Sign In</button>
+        <button class="btn btn-primary" ng-click='switchForms()'>Don't have an account?</button>
       </div>
   </form>
-  <hr></hr>
-  <div  class="text-center">
-    <button class="btn btn-primary" ng-click='switchForms()'>Don't have an account?</button>
-  </div>
 </div>
