--- a/client/views/register.html
+++ b/client/views/register.html
@@ -11,11 +11,8 @@
         <input type="password" class="form-control" name="password" ng-model="registerForm.password" required>
       </div>
       <div  class="text-center">
-        <button type="submit" class="btn btn-success">Register</button>
+        <button type="submit" class="btn btn-success">Sign Up</button>
+        <button class="btn btn-primary" ng-click='switchForms()'>Already have an account?</button>
       </div>
   </form>
-  <hr></hr>
-  <div class = 'text-center'>
-    <button class="btn btn-primary" ng-click='switchForms()'>Already have an account?</button>
-  </div>
 </div>
