Past Month Label Change

--- a/client/views/weather.html
+++ b/client/views/weather.html
@@ -39,7 +39,7 @@
 
       <!-- weatherHistory -->
       <div ng-show='weatherHistory' class='whiteContainer'>
-        <label class="checkbox-inline"><h2>Past Week</h2></label>
+        <label class="checkbox-inline"><h2>Past Month</h2></label>
         <div  id="line-chart" >
            <div class="panel panel-default">
              <div class="panel-body">
